--- a/oas_docs/output/kibana.serverless.staging.yaml
+++ b/oas_docs/output/kibana.serverless.staging.yaml
@@ -1474,6 +1474,20 @@ paths:
                                     description: Duration in seconds of rule run gap.
                                     nullable: true
                                     type: number
+                                  gap_range:
+                                    additionalProperties: false
+                                    nullable: true
+                                    type: object
+                                    properties:
+                                      from:
+                                        description: Start of the gap range.
+                                        type: string
+                                      to:
+                                        description: End of the gap range.
+                                        type: string
+                                    required:
+                                      - from
+                                      - to
                                   total_alerts_created:
                                     description: >-
                                       Total number of alerts created during last
@@ -2615,6 +2629,20 @@ paths:
                                     description: Duration in seconds of rule run gap.
                                     nullable: true
                                     type: number
+                                  gap_range:
+                                    additionalProperties: false
+                                    nullable: true
+                                    type: object
+                                    properties:
+                                      from:
+                                        description: Start of the gap range.
+                                        type: string
+                                      to:
+                                        description: End of the gap range.
+                                        type: string
+                                    required:
+                                      - from
+                                      - to
                                   total_alerts_created:
                                     description: >-
                                       Total number of alerts created during last
@@ -3727,6 +3755,20 @@ paths:
                                     description: Duration in seconds of rule run gap.
                                     nullable: true
                                     type: number
+                                  gap_range:
+                                    additionalProperties: false
+                                    nullable: true
+                                    type: object
+                                    properties:
+                                      from:
+                                        description: Start of the gap range.
+                                        type: string
+                                      to:
+                                        description: End of the gap range.
+                                        type: string
+                                    required:
+                                      - from
+                                      - to
                                   total_alerts_created:
                                     description: >-
                                       Total number of alerts created during last
@@ -4937,6 +4979,20 @@ paths:
                                     description: Duration in seconds of rule run gap.
                                     nullable: true
                                     type: number
+                                  gap_range:
+                                    additionalProperties: false
+                                    nullable: true
+                                    type: object
+                                    properties:
+                                      from:
+                                        description: Start of the gap range.
+                                        type: string
+                                      to:
+                                        description: End of the gap range.
+                                        type: string
+                                    required:
+                                      - from
+                                      - to
                                   total_alerts_created:
                                     description: >-
                                       Total number of alerts created during last
@@ -27462,6 +27518,19 @@ components:
           description: Duration in seconds of execution gap
           minimum: 0
           type: integer
+        gap_range:
+          description: Range of the execution gap
+          type: object
+          properties:
+            from:
+              description: Start of the execution gap
+              type: string
+            to:
+              description: End of the execution gap
+              type: string
+          required:
+            - from
+            - to
         total_enrichment_duration_ms:
           description: >-
             Total time spent enriching documents during current rule execution
