--- a/oas_docs/output/kibana.yaml
+++ b/oas_docs/output/kibana.yaml
@@ -1854,6 +1854,20 @@ paths:
                                     description: Duration in seconds of rule run gap.
                                     nullable: true
                                     type: number
+                                  gap_range:
+                                    additionalProperties: false
+                                    nullable: true
+                                    type: object
+                                    properties:
+                                      from:
+                                        description: Start of the gap range.
+                                        type: string
+                                      to:
+                                        description: End of the gap range.
+                                        type: string
+                                    required:
+                                      - from
+                                      - to
                                   total_alerts_created:
                                     description: >-
                                       Total number of alerts created during last
@@ -2995,6 +3009,20 @@ paths:
                                     description: Duration in seconds of rule run gap.
                                     nullable: true
                                     type: number
+                                  gap_range:
+                                    additionalProperties: false
+                                    nullable: true
+                                    type: object
+                                    properties:
+                                      from:
+                                        description: Start of the gap range.
+                                        type: string
+                                      to:
+                                        description: End of the gap range.
+                                        type: string
+                                    required:
+                                      - from
+                                      - to
                                   total_alerts_created:
                                     description: >-
                                       Total number of alerts created during last
@@ -4107,6 +4135,20 @@ paths:
                                     description: Duration in seconds of rule run gap.
                                     nullable: true
                                     type: number
+                                  gap_range:
+                                    additionalProperties: false
+                                    nullable: true
+                                    type: object
+                                    properties:
+                                      from:
+                                        description: Start of the gap range.
+                                        type: string
+                                      to:
+                                        description: End of the gap range.
+                                        type: string
+                                    required:
+                                      - from
+                                      - to
                                   total_alerts_created:
                                     description: >-
                                       Total number of alerts created during last
@@ -5317,6 +5359,20 @@ paths:
                                     description: Duration in seconds of rule run gap.
                                     nullable: true
                                     type: number
+                                  gap_range:
+                                    additionalProperties: false
+                                    nullable: true
+                                    type: object
+                                    properties:
+                                      from:
+                                        description: Start of the gap range.
+                                        type: string
+                                      to:
+                                        description: End of the gap range.
+                                        type: string
+                                    required:
+                                      - from
+                                      - to
                                   total_alerts_created:
                                     description: >-
                                       Total number of alerts created during last
