--- a/x-pack/plugins/search_api_keys/tsconfig.json
+++ b/x-pack/plugins/search_api_keys/tsconfig.json
@@ -13,34 +13,13 @@
     "@kbn/config-schema",
     "@kbn/core",
     "@kbn/core-elasticsearch-server",
-    "@kbn/core-http-browser",
     "@kbn/i18n",
     "@kbn/i18n-react",
     "@kbn/kibana-react-plugin",
-    "@kbn/security-plugin",
-    "@kbn/user-profile-components",
-    "@kbn/shared-ux-router",
-    "@kbn/shared-ux-page-kibana-template",
     "@kbn/navigation-plugin",
-    "@kbn/core-http-server",
-    "@kbn/share-plugin",
-    "@kbn/cloud-plugin",
-    "@kbn/actions-plugin",
-    "@kbn/shared-ux-utility",
-    "@kbn/core-lifecycle-browser",
-    "@kbn/stack-connectors-plugin",
-    "@kbn/cases-plugin",
-    "@kbn/triggers-actions-ui-plugin",
-    "@kbn/langchain",
     "@kbn/logging",
-    "@kbn/react-kibana-context-render",
-    "@kbn/doc-links",
-    "@kbn/core-logging-server-mocks",
-    "@kbn/analytics",
-    "@kbn/usage-collection-plugin",
-    "@kbn/console-plugin",
-    "@kbn/utility-types",
-    "@kbn/kibana-utils-plugin"
+    "@kbn/security-api-key-management",
+    "@kbn/core-security-common"
   ],
   "exclude": [
     "target/**/*",
