--- a/x-pack/plugins/search_indices/tsconfig.json
+++ b/x-pack/plugins/search_indices/tsconfig.json
@@ -34,6 +34,7 @@
     "@kbn/cloud-plugin",
     "@kbn/search-index-documents",
     "@kbn/es-types",
+    "@kbn/search-api-keys",
   ],
   "exclude": [
     "target/**/*",
