--- a/package.json
+++ b/package.json
@@ -644,6 +644,7 @@
     "@kbn/ml-data-view-utils": "link:x-pack/packages/ml/data_view_utils",
     "@kbn/ml-date-picker": "link:x-pack/packages/ml/date_picker",
     "@kbn/ml-date-utils": "link:x-pack/packages/ml/date_utils",
+    "@kbn/ml-embeddables": "link:x-pack/packages/ml/embeddables",
     "@kbn/ml-error-utils": "link:x-pack/packages/ml/error_utils",
     "@kbn/ml-field-stats-flyout": "link:x-pack/packages/ml/field_stats_flyout",
     "@kbn/ml-in-memory-table": "link:x-pack/packages/ml/in_memory_table",
