add visibility for api key

--- a/x-pack/plugins/search_indices/kibana.jsonc
+++ b/x-pack/plugins/search_indices/kibana.jsonc
@@ -13,16 +13,17 @@
     "requiredPlugins": [
       "share",
       "indexManagement",
+      "searchApiKeys",
     ],
     "optionalPlugins": [
       "cloud",
       "console",
       "usageCollection",
-      "searchApiKeys"
     ],
     "requiredBundles": [
       "kibanaReact",
-      "esUiShared"
+      "esUiShared",
+      "searchApiKeys"
     ]
   }
 }
