[Inventory][ECO] Entities page search bar (#193546)
closes https://github.com/elastic/kibana/issues/192329


https://github.com/user-attachments/assets/eb4e7aa6-14dd-48fb-a076-98ceec9cb335

---------

Co-authored-by: kibanamachine <42973632+kibanamachine@users.noreply.github.com>
Co-authored-by: Carlos Crespo <crespocarlos@users.noreply.github.com>

--- a/x-pack/plugins/observability_solution/inventory/kibana.jsonc
+++ b/x-pack/plugins/observability_solution/inventory/kibana.jsonc
@@ -12,6 +12,8 @@
       "entityManager",
       "inference",
       "dataViews",
+      "unifiedSearch",
+      "data",
       "share"
     ],
     "requiredBundles": [
