--- a/x-pack/plugins/observability_solution/inventory/tsconfig.json
+++ b/x-pack/plugins/observability_solution/inventory/tsconfig.json
@@ -36,6 +36,8 @@
     "@kbn/entities-schema",
     "@kbn/i18n-react",
     "@kbn/io-ts-utils",
+    "@kbn/unified-search-plugin",
+    "@kbn/data-plugin",
     "@kbn/core-analytics-browser",
     "@kbn/core-http-browser"
   ]
