[CI] Auto-commit changed files from 'node scripts/check_mappings_update --fix'

--- a/packages/kbn-check-mappings-update-cli/current_mappings.json
+++ b/packages/kbn-check-mappings-update-cli/current_mappings.json
@@ -1119,6 +1119,9 @@
       "install_version": {
         "type": "keyword"
       },
+      "installed_entity_definitions": {
+        "type": "keyword"
+      },
       "installed_es": {
         "properties": {
           "deferred": {
