create new ml landing links package

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1218,6 +1218,8 @@
       "@kbn/ml-is-populated-object/*": ["x-pack/packages/ml/is_populated_object/*"],
       "@kbn/ml-kibana-theme": ["x-pack/packages/ml/kibana_theme"],
       "@kbn/ml-kibana-theme/*": ["x-pack/packages/ml/kibana_theme/*"],
+      "@kbn/ml-landing-links": ["x-pack/packages/ml/landing_links"],
+      "@kbn/ml-landing-links/*": ["x-pack/packages/ml/landing_links/*"],
       "@kbn/ml-local-storage": ["x-pack/packages/ml/local_storage"],
       "@kbn/ml-local-storage/*": ["x-pack/packages/ml/local_storage/*"],
       "@kbn/ml-nested-property": ["x-pack/packages/ml/nested_property"],
