--- a/oas_docs/output/kibana.staging.yaml
+++ b/oas_docs/output/kibana.staging.yaml
@@ -11576,7 +11576,7 @@ paths:
         - Security Solution Endpoint Management API
   /api/entity_store/engines:
     get:
-      operationId: ListEntityStoreEngines
+      operationId: ListEntityEngines
       responses:
         '200':
           content:
@@ -11592,14 +11592,14 @@ paths:
                         #/components/schemas/Security_Solution_Entity_Analytics_API_EngineDescriptor
                     type: array
           description: Successful response
-      summary: List the Entity Store engines
+      summary: List the Entity Engines
       tags:
         - Security Solution Entity Analytics API
   '/api/entity_store/engines/{entityType}':
     delete:
-      operationId: DeleteEntityStore
+      operationId: DeleteEntityEngine
       parameters:
-        - description: The entity type of the store (either 'user' or 'host').
+        - description: The entity type of the engine (either 'user' or 'host').
           in: path
           name: entityType
           required: true
@@ -11622,13 +11622,13 @@ paths:
                   deleted:
                     type: boolean
           description: Successful response
-      summary: Delete the Entity Store engine
+      summary: Delete the Entity Engine
       tags:
         - Security Solution Entity Analytics API
     get:
-      operationId: GetEntityStoreEngine
+      operationId: GetEntityEngine
       parameters:
-        - description: The entity type of the store (either 'user' or 'host').
+        - description: The entity type of the engine (either 'user' or 'host').
           in: path
           name: entityType
           required: true
@@ -11643,14 +11643,14 @@ paths:
                 $ref: >-
                   #/components/schemas/Security_Solution_Entity_Analytics_API_EngineDescriptor
           description: Successful response
-      summary: Get the Entity Store engine
+      summary: Get an Entity Engine
       tags:
         - Security Solution Entity Analytics API
   '/api/entity_store/engines/{entityType}/init':
     post:
-      operationId: InitEntityStore
+      operationId: InitEntityEngine
       parameters:
-        - description: The entity type of the store (either 'user' or 'host').
+        - description: The entity type of the engine (either 'user' or 'host').
           in: path
           name: entityType
           required: true
@@ -11678,14 +11678,14 @@ paths:
                 $ref: >-
                   #/components/schemas/Security_Solution_Entity_Analytics_API_EngineDescriptor
           description: Successful response
-      summary: Initialize the Entity Store
+      summary: Initialize an Entity Engine
       tags:
         - Security Solution Entity Analytics API
   '/api/entity_store/engines/{entityType}/start':
     post:
-      operationId: StartEntityStore
+      operationId: StartEntityEngine
       parameters:
-        - description: The entity type of the store (either 'user' or 'host').
+        - description: The entity type of the engine (either 'user' or 'host').
           in: path
           name: entityType
           required: true
@@ -11702,14 +11702,14 @@ paths:
                   started:
                     type: boolean
           description: Successful response
-      summary: Start the Entity Store engine
+      summary: Start an Entity Engine
       tags:
         - Security Solution Entity Analytics API
   '/api/entity_store/engines/{entityType}/stats':
     post:
-      operationId: GetEntityStoreStats
+      operationId: GetEntityEngineStats
       parameters:
-        - description: The entity type of the store (either 'user' or 'host').
+        - description: The entity type of the engine (either 'user' or 'host').
           in: path
           name: entityType
           required: true
@@ -11741,14 +11741,14 @@ paths:
                     $ref: >-
                       #/components/schemas/Security_Solution_Entity_Analytics_API_EntityType
           description: Successful response
-      summary: Get the Entity Store engine stats
+      summary: Get Entity Engine stats
       tags:
         - Security Solution Entity Analytics API
   '/api/entity_store/engines/{entityType}/stop':
     post:
-      operationId: StopEntityStore
+      operationId: StopEntityEngine
       parameters:
-        - description: The entity type of the store (either 'user' or 'host').
+        - description: The entity type of the engine (either 'user' or 'host').
           in: path
           name: entityType
           required: true
@@ -11765,7 +11765,7 @@ paths:
                   stopped:
                     type: boolean
           description: Successful response
-      summary: Stop the Entity Store engine
+      summary: Stop an Entity Engine
       tags:
         - Security Solution Entity Analytics API
   /api/entity_store/entities/list:
