--- a/x-pack/plugins/security_solution/kibana.jsonc
+++ b/x-pack/plugins/security_solution/kibana.jsonc
@@ -36,6 +36,7 @@
       "navigation",
       "ruleRegistry",
       "sessionView",
+      "share",
       "spaces",
       "taskManager",
       "threatIntelligence",
