--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1096,6 +1096,8 @@
       "@kbn/kibana-utils-plugin/*": ["src/plugins/kibana_utils/*"],
       "@kbn/kubernetes-security-plugin": ["x-pack/plugins/kubernetes_security"],
       "@kbn/kubernetes-security-plugin/*": ["x-pack/plugins/kubernetes_security/*"],
+      "@kbn/landing-pages": ["x-pack/packages/landing_pages"],
+      "@kbn/landing-pages/*": ["x-pack/packages/landing_pages/*"],
       "@kbn/langchain": ["x-pack/packages/kbn-langchain"],
       "@kbn/langchain/*": ["x-pack/packages/kbn-langchain/*"],
       "@kbn/language-documentation-popover": ["packages/kbn-language-documentation-popover"],
@@ -1218,8 +1220,6 @@
       "@kbn/ml-is-populated-object/*": ["x-pack/packages/ml/is_populated_object/*"],
       "@kbn/ml-kibana-theme": ["x-pack/packages/ml/kibana_theme"],
       "@kbn/ml-kibana-theme/*": ["x-pack/packages/ml/kibana_theme/*"],
-      "@kbn/ml-landing-links": ["x-pack/packages/ml/landing_links"],
-      "@kbn/ml-landing-links/*": ["x-pack/packages/ml/landing_links/*"],
       "@kbn/ml-local-storage": ["x-pack/packages/ml/local_storage"],
       "@kbn/ml-local-storage/*": ["x-pack/packages/ml/local_storage/*"],
       "@kbn/ml-nested-property": ["x-pack/packages/ml/nested_property"],
