--- a/x-pack/packages/landing_pages/kibana.jsonc
+++ b/x-pack/packages/landing_pages/kibana.jsonc
@@ -1,5 +1,5 @@
 {
   "type": "shared-common",
-  "id": "@kbn/ml-landing-links",
+  "id": "@kbn/landing-pages",
   "owner": "@elastic/security-threat-hunting-explore"
 }
