--- a/x-pack/packages/landing_pages/package.json
+++ b/x-pack/packages/landing_pages/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kbn/ml-landing-links",
+  "name": "@kbn/landing-pages",
   "private": true,
   "version": "1.0.0",
   "license": "Elastic License 2.0",
