--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "**/hoist-non-react-statics": "^3.3.2",
     "**/isomorphic-fetch/node-fetch": "^2.6.7",
     "**/langchain": "^0.2.11",
-    "**/react-intl/**/@types/react": "~18.2.7",
+    "**/react-intl/**/@types/react": "^17.0.45",
     "**/remark-parse/trim": "1.0.1",
     "**/sharp": "0.32.6",
     "**/typescript": "5.1.6",
@@ -1178,10 +1178,12 @@
     "rbush": "^3.0.1",
     "re-resizable": "^6.9.9",
     "re2js": "0.4.1",
-    "react": "~18.2.0",
+    "react": "^17.0.2",
+    "react-18": "npm:react@~18.2.0",
+    "react-18-dom": "npm:react-dom@~18.2.0",
     "react-ace": "^7.0.5",
     "react-diff-view": "^3.2.1",
-    "react-dom": "~18.2.0",
+    "react-dom": "^17.0.2",
     "react-dropzone": "^4.2.9",
     "react-fast-compare": "^2.0.4",
     "react-grid-layout": "^1.3.4",
