--- a/x-pack/plugins/observability_solution/inventory/tsconfig.json
+++ b/x-pack/plugins/observability_solution/inventory/tsconfig.json
@@ -39,6 +39,7 @@
     "@kbn/unified-search-plugin",
     "@kbn/data-plugin",
     "@kbn/core-analytics-browser",
-    "@kbn/core-http-browser"
+    "@kbn/core-http-browser",
+    "@kbn/es-query"
   ]
 }
