--- a/oas_docs/output/kibana.staging.yaml
+++ b/oas_docs/output/kibana.staging.yaml
@@ -1859,15 +1859,15 @@ paths:
                                     nullable: true
                                     type: object
                                     properties:
-                                      from:
-                                        description: Start of the gap range.
-                                        type: string
-                                      to:
+                                      gte:
                                         description: End of the gap range.
                                         type: string
+                                      lte:
+                                        description: Start of the gap range.
+                                        type: string
                                     required:
-                                      - from
-                                      - to
+                                      - lte
+                                      - gte
                                   total_alerts_created:
                                     description: >-
                                       Total number of alerts created during last
@@ -3014,15 +3014,15 @@ paths:
                                     nullable: true
                                     type: object
                                     properties:
-                                      from:
-                                        description: Start of the gap range.
-                                        type: string
-                                      to:
+                                      gte:
                                         description: End of the gap range.
                                         type: string
+                                      lte:
+                                        description: Start of the gap range.
+                                        type: string
                                     required:
-                                      - from
-                                      - to
+                                      - lte
+                                      - gte
                                   total_alerts_created:
                                     description: >-
                                       Total number of alerts created during last
@@ -4140,15 +4140,15 @@ paths:
                                     nullable: true
                                     type: object
                                     properties:
-                                      from:
-                                        description: Start of the gap range.
-                                        type: string
-                                      to:
+                                      gte:
                                         description: End of the gap range.
                                         type: string
+                                      lte:
+                                        description: Start of the gap range.
+                                        type: string
                                     required:
-                                      - from
-                                      - to
+                                      - lte
+                                      - gte
                                   total_alerts_created:
                                     description: >-
                                       Total number of alerts created during last
@@ -5364,15 +5364,15 @@ paths:
                                     nullable: true
                                     type: object
                                     properties:
-                                      from:
-                                        description: Start of the gap range.
-                                        type: string
-                                      to:
+                                      gte:
                                         description: End of the gap range.
                                         type: string
+                                      lte:
+                                        description: Start of the gap range.
+                                        type: string
                                     required:
-                                      - from
-                                      - to
+                                      - lte
+                                      - gte
                                   total_alerts_created:
                                     description: >-
                                       Total number of alerts created during last
@@ -35544,15 +35544,15 @@ components:
           description: Range of the execution gap
           type: object
           properties:
-            from:
-              description: Start of the execution gap
+            gte:
+              description: Start date of the execution gap
               type: string
-            to:
-              description: End of the execution gap
+            lte:
+              description: End date of the execution gap
               type: string
           required:
-            - from
-            - to
+            - gte
+            - lte
         total_enrichment_duration_ms:
           description: >-
             Total time spent enriching documents during current rule execution
