--- a/oas_docs/output/kibana.serverless.yaml
+++ b/oas_docs/output/kibana.serverless.yaml
@@ -1479,15 +1479,15 @@ paths:
                                     nullable: true
                                     type: object
                                     properties:
-                                      from:
-                                        description: Start of the gap range.
-                                        type: string
-                                      to:
+                                      gte:
                                         description: End of the gap range.
                                         type: string
+                                      lte:
+                                        description: Start of the gap range.
+                                        type: string
                                     required:
-                                      - from
-                                      - to
+                                      - lte
+                                      - gte
                                   total_alerts_created:
                                     description: >-
                                       Total number of alerts created during last
@@ -2634,15 +2634,15 @@ paths:
                                     nullable: true
                                     type: object
                                     properties:
-                                      from:
-                                        description: Start of the gap range.
-                                        type: string
-                                      to:
+                                      gte:
                                         description: End of the gap range.
                                         type: string
+                                      lte:
+                                        description: Start of the gap range.
+                                        type: string
                                     required:
-                                      - from
-                                      - to
+                                      - lte
+                                      - gte
                                   total_alerts_created:
                                     description: >-
                                       Total number of alerts created during last
@@ -3760,15 +3760,15 @@ paths:
                                     nullable: true
                                     type: object
                                     properties:
-                                      from:
-                                        description: Start of the gap range.
-                                        type: string
-                                      to:
+                                      gte:
                                         description: End of the gap range.
                                         type: string
+                                      lte:
+                                        description: Start of the gap range.
+                                        type: string
                                     required:
-                                      - from
-                                      - to
+                                      - lte
+                                      - gte
                                   total_alerts_created:
                                     description: >-
                                       Total number of alerts created during last
@@ -4984,15 +4984,15 @@ paths:
                                     nullable: true
                                     type: object
                                     properties:
-                                      from:
-                                        description: Start of the gap range.
-                                        type: string
-                                      to:
+                                      gte:
                                         description: End of the gap range.
                                         type: string
+                                      lte:
+                                        description: Start of the gap range.
+                                        type: string
                                     required:
-                                      - from
-                                      - to
+                                      - lte
+                                      - gte
                                   total_alerts_created:
                                     description: >-
                                       Total number of alerts created during last
