--- a/oas_docs/output/kibana.yaml
+++ b/oas_docs/output/kibana.yaml
@@ -1859,15 +1859,15 @@ paths:
                                     nullable: true
                                     type: object
                                     properties:
-                                      from:
-                                        description: Start of the gap range.
-                                        type: string
-                                      to:
+                                      gte:
                                         description: End of the gap range.
                                         type: string
+                                      lte:
+                                        description: Start of the gap range.
+                                        type: string
                                     required:
-                                      - from
-                                      - to
+                                      - lte
+                                      - gte
                                   total_alerts_created:
                                     description: >-
                                       Total number of alerts created during last
@@ -3014,15 +3014,15 @@ paths:
                                     nullable: true
                                     type: object
                                     properties:
-                                      from:
-                                        description: Start of the gap range.
-                                        type: string
-                                      to:
+                                      gte:
                                         description: End of the gap range.
                                         type: string
+                                      lte:
+                                        description: Start of the gap range.
+                                        type: string
                                     required:
-                                      - from
-                                      - to
+                                      - lte
+                                      - gte
                                   total_alerts_created:
                                     description: >-
                                       Total number of alerts created during last
@@ -4140,15 +4140,15 @@ paths:
                                     nullable: true
                                     type: object
                                     properties:
-                                      from:
-                                        description: Start of the gap range.
-                                        type: string
-                                      to:
+                                      gte:
                                         description: End of the gap range.
                                         type: string
+                                      lte:
+                                        description: Start of the gap range.
+                                        type: string
                                     required:
-                                      - from
-                                      - to
+                                      - lte
+                                      - gte
                                   total_alerts_created:
                                     description: >-
                                       Total number of alerts created during last
@@ -5364,15 +5364,15 @@ paths:
                                     nullable: true
                                     type: object
                                     properties:
-                                      from:
-                                        description: Start of the gap range.
-                                        type: string
-                                      to:
+                                      gte:
                                         description: End of the gap range.
                                         type: string
+                                      lte:
+                                        description: Start of the gap range.
+                                        type: string
                                     required:
-                                      - from
-                                      - to
+                                      - lte
+                                      - gte
                                   total_alerts_created:
                                     description: >-
                                       Total number of alerts created during last
