--- a/x-pack/plugins/ml/kibana.jsonc
+++ b/x-pack/plugins/ml/kibana.jsonc
@@ -56,7 +56,7 @@
       "lens",
       "maps",
       "savedObjectsFinder",
-      "usageCollection"
+      "usageCollection",
     ],
     "extraPublicDirs": ["common"]
   }
