cleaned up docs

--- a/x-pack/plugins/actions/docs/openapi/components/schemas/inference_secrets.yaml
+++ b/x-pack/plugins/actions/docs/openapi/components/schemas/inference_secrets.yaml
@@ -2,8 +2,8 @@ title: Connector secrets properties for an Inference API connector
 description: Defines secrets for connectors when type is `.inference`.
 type: object
 required:
-  - credentialsJSON
+  - providerSecrets
 properties:
-  credentialsJSON:
+  providerSecrets:
     type: string
-    description: The service account credentials JSON file. The service account should have Vertex AI user IAM role assigned to it.
+    description: The service account credentials. The service account could have different type of properties to encode.
